Version 0.3 (19/05/2014)
------------------------

	+ Readded GPL License and Copyright.
	+ Bugfix: properly log files with spaces in their names.
	+ Bugfix: EXCLUDE variable in porgrc was not parsed correctly.
	+ Bugfix: Skip sourcing of /etc/bash_completion when installing
	  porg_bash_completion, to avoid errors from foreign software.


Version 0.2 (23/04/2014)
------------------------

	+ Several bugs fixed thanks to the contribution of Masahiro Kasahara:
	  - paco2porg failed when importing paco logs with no logged files
	  - porg hanged up when logging packages and the installer program calls 
	    jemalloc
	+ Fixed bug that prevented logging of files created by programs that don't
	  terminate normally.
	+ Fixed bug with resolution of relative paths.
	+ Removed option '-g|--log-ignore-errors'.
	+ Handle system calls openat(), linkat(), etc... when installing a package.
	+ Do not handle *truncate() system calls when installing a package.
	+ Removed porg.pc from distribution, as porg is not a library.


Version 0.1 (16/03/2014)
------------------------

	+ Removed question 3 of the FAQ, which discusses logging of directories.
	+ Removed getopt from the distribution. Use native getopt.
	+ Do not check for regex.h in configure (assume it is available).
	+ Rewritten porgball in bash, and fixed some bugs in it.
	+ Fixed bug in porg when installing packages with description spanning
	  more than one line (thanks Gordon Findlay).


Version 0.0 (14/03/2014)
------------------------

Changes from the last version of paco:

	+ Disabled the options for removing shared files when uninstalling a
	  package, both in porg and grop. Now shared files are never removed,
	  as it ougth to be.
	+ Disabled listing of missing and shared files.
	+ Simplification of the GUI.
	+ Major code enhancements and cleanup.